@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.8
+Release: 0.9
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -495,6 +495,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Mon Nov 29 2004 Jeff Johnson <jbj@jbj.org> 4.4-0.9
+- detect and return errors from neon through Ferror.
+
 * Sun Nov 28 2004 Jeff Johnson <jbj@jbj.org> 4.4-0.8
 - add support for automagic pubkey retrieval using HKP.
 
